<resources>
    <string name="app_name">Restorater</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="restaurater">RESTAURATER</string>
    <string name="enter_restaurant_name">Rechercher un Restaurant</string>
    <string name="list">List</string>
    <string name="location">Location</string>
    <string name="user">User</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="label_email">Adresse email:</string>
    <string name="enter_email">mon.adresse@gmail.com</string>
    <string name="enter_password">****</string>
    <string name="label_password">Mot de passe:</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter">Se Connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="restaurant_distance">%1$s km</string>
    <string name="restaurant_name">Unknown</string>
    <string name="restaurant_rating">0</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mes_commentaires">Mes Commentaires</string>
    <string name="star">Star</string>
    <string name="search_hint">Chercher un Restaurant</string>
    <string name="login">Login\n</string>
    <string name="_0_0">0.0</string>
    <string name="ajouter_au_repertoire">Ajouter au repertoire</string>
    <string name="no_rating">No rating</string>
    <string name="poster">Poster</string>
</resources>