<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurant_item">

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/restaurant_name" />

    <TextView
        android:id="@+id/restaurant_distance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/restaurant_distance" />

    <TextView
        android:id="@+id/restaurant_rating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/restaurant_rating" />


</FrameLayout>